Added Next 40 days in ui using js from current date by default

--- a/index.html
+++ b/index.html
@@ -13,156 +13,18 @@
 
     <div class="room_con">
         <p>Deluxe Rooms (Garden View), Available 9</p>
-        <div class="room scrollbar-hidden">
-
-
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
+        <div id="deluxRoom" class="room scrollbar-hidden">
         </div>
     </div>
 
     <div class="room_con">
         <p>Family Rooms (Garden View), Available 2</p>
-        <div class="room scrollbar-hidden">
-
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-            <div class="date_card booked">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
-            <div class="date_card">
-                <p>15 Nov</p>
-                <p>Morning</p>
-                <p>Evening</p>
-            </div>
-
+        <div id="familyRoom" class="room scrollbar-hidden">
         </div>
     </div>
 
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
