Added fixed Amount Display div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div>
+    <div id="booking_con">
 
         <!-- Rooms Booking date Cards START -->
         <div class="room_con">
@@ -45,6 +45,12 @@
             <button>Book Now</button>
         </div>
         <!-- FORM END -->
+
+        <!-- Amount Fixed Display Start  -->
+        <div class="amount_disp">
+            <p>Amount: <span>2500Rs</span></p>
+        </div>
+        <!-- Amount Fixed Display Start  -->
 
     </div>
 
