--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
 
 
-    <script src="./script.js"></script>
+    <script src="./js/DateCardUI.js"></script>
+    <script src="./js/Script.js"></script>
 </body>
 
 </html>
